fix:header navbar

--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Abudul Yaseer</title>
     <link href="./output.css" rel="stylesheet" />
   </head>
-  <body class="text-xl">
-    <div class="bg-black w-full">
-      <header class="bg-red-500 w-full fixed top-0">
-        <div class="max-w-6xl mx-auto">
+  <body class="text-base">
+    <div class="w-full bg-black">
+      <header class="fixed top-0 w-full bg-black border-b border-[#1a1a1a]">
+        <div class="max-w-6xl px-4 mx-auto md:p-0">
           <div class="flex items-center justify-between h-16">
-            <div class="bg-gray-300 w">logo</div>
-            <nav>
-              <ul>
-                <li>a</li>
-                <li>b</li>
+            <div class="">
+              <img src="../image/white.png" alt="" class="h-6" />
+            </div>
+            <div class="hidden w-full md:block md:w-auto"">
+              <ul
+                class="flex flex-col text-[#888888] p-4 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0">
+                <li>
+                  <a
+                    href="#"
+                    class="block px-3 py-2 rounded md:bg-transparent md:p-0 dark:text-[#888888]" aria-current="page"
+                    >Home</a>
+                </li>
+                <a
+                    href="#"
+                    class="block px-3 py-2 rounded md:bg-transparent md:p-0 dark:text-[#888888]""
+                    aria-current="page"
+                    >About</a>
+                </li>
+              </li>
+              <a
+                  href="#"
+                  class="block px-3 py-2 rounded md:bg-transparent md:p-0 dark:text-[#888888]""
+                  aria-current="page"
+                  >About</a>
+              </li>
               </ul>
-            </nav>
+            </div>
             <div>
-              <button class="bg-white py-1 px-2 rounded-lg font-medium">
-                login
+              <button
+                class="flex flex-row gap-2 px-6 py-1 font-semibold bg-white rounded-lg">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="w-6 h-6">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M20.25 8.511c.884.284 1.5 1.128 1.5 2.097v4.286c0 1.136-.847 2.1-1.98 2.193-.34.027-.68.052-1.02.072v3.091l-3-3c-1.354 0-2.694-.055-4.02-.163a2.115 2.115 0 0 1-.825-.242m9.345-8.334a2.126 2.126 0 0 0-.476-.095 48.64 48.64 0 0 0-8.048 0c-1.131.094-1.976 1.057-1.976 2.192v4.286c0 .837.46 1.58 1.155 1.951m9.345-8.334V6.637c0-1.621-1.152-3.026-2.76-3.235A48.455 48.455 0 0 0 11.25 3c-2.115 0-4.198.137-6.24.402-1.608.209-2.76 1.614-2.76 3.235v6.226c0 1.621 1.152 3.026 2.76 3.235.577.075 1.157.14 1.74.194V21l4.155-4.155" />
+                </svg>
+                Let's chat
               </button>
             </div>
           </div>
@@ -29,7 +63,7 @@
         <div class="max-w-6xl mx-auto mt-16">
           <h1 class="text-3xl font-bold text-white">Hello world!</h1>
         </div>
-        <div class="bg-slate-100 max-w-6xl mx-auto"></div>
+        <div class="max-w-6xl mx-auto bg-slate-100"></div>
         <p class="text-white">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
           doloremque nemo necessitatibus esse nisi asperiores molestiae quo
